--- a/sass/molecules/_mixins.sass
+++ b/sass/molecules/_mixins.sass
@@ -1,13 +1,16 @@
 
 /* ======== Cores */
 $preto: #000
-$branco: white
+$branco: #FFFBF1
+$branco1: white 
+$pele: #CBB370
 $azul: #31b1e7
 $azul-claro: #cadbdc
 $laranja: orange
-$verde: #9ad15e
+$verde: #21786C
 $cinza-claro: #e1e1e1
-$vermelho: #d90018
+$vermelho: #910000 
+$mostarda: #fa5d08
 
 /* ======== Font */
 $light: 300
