--- a/sass/organisms/_footer.sass
+++ b/sass/organisms/_footer.sass
@@ -10,8 +10,9 @@ footer
 			width: 60px
 			height: 60px 
 			display: table
-			margin: 0 auto 10px
+			margin: 0 auto 
 	p 
 		text-align: center
 		margin:  0 auto 
-		color: $branco
+		padding: 15px
+		color: $branco 
