--- a/sass/organisms/_fotocontato.sass
+++ b/sass/organisms/_fotocontato.sass
@@ -1,10 +1,11 @@
 .fotocontato 
 	+clearfix 
-	min-height: 700px
+	min-height: 300px
 	background:
-		image: url('../images/foto-contato.png')
+		image: url('../images/13.jpg')
 		repeat: no-repeat
 		color: $preto 
-		width: auto
-		height: auto
+		position: top center
+		
+
 
