--- a/sass/organisms/_fotomain.sass
+++ b/sass/organisms/_fotomain.sass
@@ -1,8 +1,12 @@
 .fotomain 
 	+clearfix 
-	min-height: 800px
+	min-height: 300px
 	background:
-		image: url('../images/dreamstime.jpg')
+		image: url('../images/16.png')
 		repeat: no-repeat
 		color: $preto 
-		
+		position: center
+		img 
+			width: 100%
+			height: 100% 
+
