--- a/sass/molecules/_mixins.sass
+++ b/sass/molecules/_mixins.sass
@@ -10,6 +10,7 @@ $laranja: orange
 $verde: #21786C
 $cinza-claro: #e1e1e1
 $vermelho: #910000 
+$vermelho2: #e31e25
 $mostarda: #fa5d08
 
 /* ======== Font */
