--- a/sass/organisms/_fotomain.sass
+++ b/sass/organisms/_fotomain.sass
@@ -1,12 +1,11 @@
 .fotomain 
 	+clearfix 
-	min-height: 300px
+	min-height: 550px
 	background:
 		image: url('../images/16.png')
 		repeat: no-repeat
 		color: $preto 
 		position: center
-		img 
-			width: 100%
-			height: 100% 
-
+		weight: 100%
+		height: 100%
+		
