--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -8,18 +8,31 @@ header
 	
 	.logo
 		float: left 
-		margin: 15px 0 0 10px 
+		margin: 15px 10px 0 10px 
 		list-style: none
 		img	
 			width: 61px
 			height: 26px
-
-
+	
+	h2
+		display: inline-block !important
+		list-style: none
+		color: $pele 
+		font-size: 18px
+		text-transform: uppercase
+		margin: 0 10px 0
+	strong 
+		font-size: 18px
+		text-transform: uppercase
+		color: $vermelho2
+		margin: 0 8px 0 2px  
 		
+	
 
 	.links
 		float: right 
 		margin: 15px 0 0 15px 
+		padding: 3px
 
 		nav,
 		.social
