--- a/sass/organisms/_footer.sass
+++ b/sass/organisms/_footer.sass
@@ -15,6 +15,10 @@ footer
 			border: 1.5px solid $pele
 			padding: 4px 
 			+border-radius(180px)
+			
+			&:hover 
+				border-color: $verde 
+				+transition(.2s)
 	p 
 		text-align: center
 		margin:  0 auto 
