--- a/sass/geral.sass
+++ b/sass/geral.sass
@@ -4,4 +4,5 @@
 @import ../bower_components/breakpoint-sass/stylesheets/breakpoint
 @import molecules/reset
 @import organisms/header
+@import organisms/menu-responsivo
 @import organisms/footer
