--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -43,10 +43,9 @@ body
 			min-width: 550px
 			max-width: 600px
 			margin-left: 5%
-
 			//flex//
 
-			
+			flex-direction: column
 			flex: 1 0 50%
 
 
@@ -84,7 +83,7 @@ body
 		padding: 5%
 		+img-responsive 
 		margin-top: 25px
-		width: 200px
+
 		img 
 			width: 95%
 			height: auto
