--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -40,8 +40,8 @@ body
 
 		article 
 
-			min-width: 550px
-			max-width: 600px
+		
+			max-width: 500px
 			margin-left: 5%
 			//flex//
 
@@ -80,7 +80,8 @@ body
 		
 		flex: 1 1 50%
 		
-		padding: 5%
+		margin-right: 5%
+		max-width: 500px
 		+img-responsive 
 		margin-top: 25px
 
