--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -35,7 +35,7 @@ body
 		display: flex 
 		flex-wrap: wrap
 		flex-direction: row
-
+		justify-content: space-between 
 
 
 		article 
@@ -79,14 +79,14 @@ body
 	aside 
 		
 		flex: 1 1 50%
+
 		
 		margin-right: 5%
-		max-width: 500px
 		+img-responsive 
 		margin-top: 25px
 
 		img 
-			width: 95%
+			width: 90%
 			height: auto
 	
 
