--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -81,12 +81,12 @@ body
 		flex: 1 1 50%
 
 		
-		margin-right: 5%
+		margin: 0 5% 0 5%
 		+img-responsive 
 		margin-top: 25px
 		max-width: 550px
 		img 
-			width: 90%
+			width: auto 
 			height: auto
 	
 
