--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -79,9 +79,9 @@ body
 	aside 
 		
 		flex: 1 1 50%
-
+		justify-content: flex-end 
 		
-		margin: 0 5% 0 5%
+		
 		+img-responsive 
 		margin-top: 25px
 		max-width: 550px
@@ -94,7 +94,7 @@ body
 
 
 		.widget
-
+			
  		 
 
 			&:hover
