--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -90,10 +90,12 @@ body
 			height: auto
 
 		+breakpoint($tablet)
-			img 
-				width: 70%
-				height: auto 
-	
+			aside 
+				
+				img 
+					width: 70%
+					height: auto 
+		
 
 
 
