--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -91,7 +91,7 @@ body
 
 		+breakpoint($tablet)
 			aside 
-				
+
 				img 
 					width: 70%
 					height: auto 
@@ -101,6 +101,8 @@ body
 
 
 		.widget
+
+			margin: 0 0 50px 
 			
  		 
 
