--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -69,6 +69,20 @@ header
 
 					a 
 
+					&:hover 
+						&:after 
+							width: 40%
+
+					&:after 
+						content: ""
+						display: table 
+						margin: 5px auto 0
+						width: 0%
+						height: 2px 
+						background-color: $pele 
+						+transition(.3s)
+
+
 
 
 
