--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -42,10 +42,10 @@ header
 
 		a 
 			color: $pele
-				
 			&:hover 
 				color: $verde
 				+transition(.2s)
+			&:hover 	
 				&:after 
 					width: 40%
 
@@ -55,7 +55,7 @@ header
 				margin: 5px auto 0
 				width: 0%
 				height: 2px 
-				background-color: $pele 
+				background-color: $verde 
 				+transition(.3s)
 
 		nav,
