--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -45,18 +45,7 @@ header
 			&:hover 
 				color: $verde
 				+transition(.2s)
-			&:hover 	
-				&:after 
-					width: 40%
-
-			&:after 
-				content: ""
-				display: table 
-				margin: 5px auto 0
-				width: 0%
-				height: 2px 
-				background-color: $verde 
-				+transition(.3s)
+			
 
 		nav,
 		.social
@@ -76,8 +65,22 @@ header
 					color: $pele
 					margin: 0 20px 0 0 
 					font-size: 13px 
-
 					
+					a 
+
+						&:hover 	
+							&:after 
+								width: 40%
+
+						&:after 
+							content: ""
+							display: table 
+							margin: 5px auto 0
+							width: 0%
+							height: 2px 
+							background-color: $verde 
+							+transition(.3s)
+								
 
 
 
