--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -73,8 +73,8 @@ header
 								width: 40%
 
 						&:after 
-							content: ""
-							display: table 
+							content: " "
+							display: block
 							margin: 5px auto 0
 							width: 0%
 							height: 2px 
