--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -43,7 +43,7 @@ header
 		a 
 			color: $pele
 			&:hover 
-				color: $verde
+				color: $branco 
 				+transition(.2s)
 			
 
@@ -78,7 +78,7 @@ header
 								margin: 5px auto 0
 								width: 0%
 								height: 2px 
-								background-color: $verde 
+								background-color: $branco 
 								+transition(.3s)
 									
 
