--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -104,7 +104,8 @@ header
 					+border-radius(120px)
 
 					&:hover 
-						border-color: $verde  
+						border-color: $branco
+						color: $branco  
 			
 
 	
