--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -29,7 +29,7 @@ body
 			text-align: center
 			font-size: 20px
 	.main 
-		margin-top: 3%
+		
 		//flex//
 		+flexbox 
 		display: flex 
@@ -43,6 +43,7 @@ body
 		
 			max-width: 500px
 			margin-left: 5%
+			margin-top: 50px
 			//flex//
 
 			flex-direction: column
@@ -82,32 +83,85 @@ body
 		justify-content: flex-end 
 		
 		
-		+img-responsive 
+
 		margin-top: 25px
 		max-width: 550px
-		img 
-			width: 90% 
-			height: auto
-
-		+breakpoint($tablet)
-			aside 
-
-				img 
-					width: 70%
-					height: auto 
 		
+			
+		
+		li 
+
+			overflow: hidden
+
+
+			figure 
+					position: relative
+					background: transparent
+					margin-top: 50px
+					margin-right: 100px
+
+					&:hover
+						a 
+							+opacity(1)
+							color: $pele
+
+						.overlay
+							top: 0
+
+					img 
+						+img-responsive 
+						border: solid 2px $verde
+						border-radius: 100px
+						width: 100% 
+						height: auto
+						
 
 
 
+					figcaption
+						
+						a 
 
+							text-align: center
+							text-transform: uppercase
+							text-decoration: none 
+							margin: 20px auto 
+							position: absolute
+							z-index: 2
+							color: $pele	
+							width: 100%
+							top: 10%
+							+opacity(0)
+							
+
+							h4 
+								+font-size(25px)
+
+							p 
+								+font-size(20px)
+							
+							strong
+								color: $branco
+
+
+							
+						.overlay 
+							+gradient(270deg, $preto, $preto)
+							+opacity(.8)
+							position: absolute
+							left: 0
+							top: 100% 
+							display: block
+							width: 100%
+							height: 100% 
+							border: solid 1px $pele
+							border-radius: 100px
+
+						a, 
+						.overlay 
+							+transition(.4s)
+
+			
 		.widget
 
-			margin: 0 0 50px 
-			
- 		 
-
-			&:hover
-				border-color: $verde
-				+transition(.2s)
-			
-
+					margin: 0 0 50px 
