--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -43,7 +43,7 @@ header
 		a 
 			color: $pele
 			&:hover 
-				color: $branco 
+				color: $verde 
 				+transition(.2s)
 			
 
@@ -77,14 +77,9 @@ header
 							display: block
 							margin: 5px auto 0
 							width: 0%
-							height: 2px 
-							background-color: $branco 
+							height: 1.5px 
+							background-color: $verde
 							+transition(.3s)
-									
-
-
-
-
 
 
 		.social
@@ -104,8 +99,8 @@ header
 					+border-radius(120px)
 
 					&:hover 
-						border-color: $branco
-						color: $branco  
+						border-color: $verde 
+						color: $verde 
 			
 
 	
