--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -56,22 +56,23 @@ body
 				color: $branco
 				text-transform: uppercase
 				text-align: center
-				font-size: 20px
+				margin-bottom: 50px
+				+font-size(30px)
 
 			strong 
 				color: $pele
-
 				padding: 15px
-
 				margin: 0 0 0 15px
 			h3
 				color: $pele
-				font-size: 18px
+				+font-size(28px)
 
 
 			p  
 				color: $verde
 				text-transform: uppercase
+				+font-size(20px)
+
 
 			.sub
 				text-align: center
@@ -87,6 +88,14 @@ body
 		margin-top: 25px
 		max-width: 550px
 		
+		.title 
+			h2 
+				text-align: center 
+				text-transform: uppercase
+				color: $branco 
+				margin-right: 100px
+				margin-top: 44px
+				+font-size(30px)
 			
 		
 		li 
@@ -97,7 +106,7 @@ body
 			figure 
 					position: relative
 					background: transparent
-					margin-top: 50px
+					margin-top: 45px
 					margin-right: 100px
 
 					&:hover
