--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -50,13 +50,18 @@ body
 			flex: 1 0 50%
 
 
-
+			h2.entrada 
+				color: $branco 
+				text-transform: uppercase
+				text-align: center 
+				margin-bottom: 50px
+				+font-size(30px)
 
 			h2
 				color: $branco
 				text-transform: uppercase
 				text-align: center
-				margin-bottom: 50px
+				
 				+font-size(30px)
 
 			strong 
