cor sushi header

--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -28,7 +28,7 @@ header
 		display: inline-block
 		font-size: 16px
 		text-transform: uppercase
-		color: $vermelho2
+		color: $cinza-claro
 		font-weight: $bold
 		
   
