--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -57,6 +57,12 @@ body
 				margin-bottom: 50px
 				+font-size(30px)
 
+			h2.info 
+				color: $vermelho2
+				text-transform: uppercase
+				text-align: center
+				+font-size(25px)
+
 			h2
 				color: $branco
 				text-transform: uppercase
