--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -8,6 +8,7 @@ body
 		.foto
 			min-height: 500px
 			margin-top: 100px
+
 				
 			background:
 				image: url("../images/menufoto.png")
@@ -15,8 +16,8 @@ body
 				height: auto  
 				repeat: no-repeat
 				position: center			
-				margin: 100px 0 0 
-				size: 55%
+				size: 45%
+
 			+breakpoint($tablet)
 				min-height: 350px
 				margin-top: 60px
@@ -58,7 +59,7 @@ body
 
 
 			h2.entrada 
-				color: $branco 
+				color: $cinza-claro 
 				text-transform: uppercase
 				text-align: center 
 				margin-bottom: 50px
@@ -71,7 +72,7 @@ body
 				+font-size(25px)
 
 			h2
-				color: $branco
+				color: $cinza-claro
 				text-transform: uppercase
 				text-align: center
 				
@@ -128,7 +129,7 @@ body
 			h2 
 				text-align: center 
 				text-transform: uppercase
-				color: $branco 
+				color: $cinza-claro
 				margin-right: 100px
 				margin-top: 44px
 				+font-size(30px)
@@ -203,11 +204,7 @@ body
 							
 							strong
 								color: $branco
-							+breakpoint($celular)
-							 	h4
-									+font-size(22px)
-								p 	
-									+font-size(18px)
+							
 							
 						.overlay 
 							+gradient(270deg, $preto, $preto)
