--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -23,18 +23,23 @@ body
 				margin-top: 60px
 
 			+breakpoint($celular)
+				display: none
 				min-height: 150px
-				margin-top: 40px
+				margin-top: auto 
 		h2
 			color: $pele 
 			text-align: center
 			text-transform: uppercase
 			+font-size(30px)
+			+breakpoint($celular)
+				margin-top: 100px
 		h3
 			color: $verde 
 			text-transform: uppercase
 			text-align: center
-			+font-size(25px)
+			+font-size(25px) 
+			+breakpoint($celular)
+				+font-size(18px)
 
 	.main 
 		
@@ -52,6 +57,13 @@ body
 			max-width: 500px
 			margin-left: 5%
 			margin-top: 50px
+			
+		
+			+breakpoint($celular)
+				margin-left: 5px 
+			@media screen and (max-width: 700px) and (min-width: 360px)
+				margin-left: 5%
+				max-width: 100%
 			//flex//
 
 			flex-direction: column
@@ -82,6 +94,10 @@ body
 				color: $pele
 				padding: 15px
 				margin: 0 0 0 15px
+				+breakpoint($celular)
+					padding: 1px
+					margin: 1px
+
 
 
 
@@ -94,6 +110,7 @@ body
 				color: $verde
 				text-transform: uppercase
 				+font-size(20px)
+
 
 
 			.sub
@@ -118,12 +135,10 @@ body
 		
 		flex: 1 1 50%
 		justify-content: flex-end 
-		
-		
 
 		margin-top: 25px
-		max-width: 550px
-		 
+		max-width: 550px					 
+						 
 		.title 
 			
 			h2 
@@ -133,8 +148,11 @@ body
 				margin-right: 100px
 				margin-top: 44px
 				+font-size(30px)
+				
+				
 				+breakpoint($tablet)
 					margin-right: 0px
+
 
 				+breakpoint($celular)
 					margin-right: 0px
@@ -152,8 +170,6 @@ body
 					background: transparent
 					margin-top: 45px
 					margin-right: 100px
-		
-					
 					
 					+breakpoint($tablet)
 						margin: 30px 30px 0 30px
