--- a/sass/organisms/_menu-responsivo.sass
+++ b/sass/organisms/_menu-responsivo.sass
@@ -10,6 +10,7 @@
 			+border-radius(40px)
 			z-index: 30
 			cursor: pointer
+
 	
 	.menu 
 		list-style: none 
@@ -18,6 +19,7 @@
 		padding-left: 0
 		width: 15em
 		margin: 1em auto 		
+		
 		
 		li 
 			// outline: 1px solid $branco
@@ -48,11 +50,13 @@
 		background: $preto 
 		+opacity(.7)
 		height: 100%
+		+transition(.3s)
 		// top: 0
 
 
 	nav.mostrar
 		left: 0
+		+transition(.2s)
 
 	
 	
