--- a/sass/organisms/_header.sass
+++ b/sass/organisms/_header.sass
@@ -126,6 +126,11 @@ header
 			font-size: 14px 	
 			+border-radius(120px)
 			cursor: pointer 
+			
+			&:focus,
+			&:hover 
+				color: $verde 
+				+transition(.2s)
 
 	
 
