--- a/sass/templates/_menu2.sass
+++ b/sass/templates/_menu2.sass
@@ -131,6 +131,14 @@ body
 					+font-size(20px)
 				p 
 					+font-size(18px)
+			@media screen and (max-width: 319px)
+
+				h2
+					+font-size(21px)
+				h3
+					+font-size(19px)
+				p 
+					+font-size(18px)
 	aside 
 		
 		flex: 1 1 50%
